<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/drawer_menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_my_queues"
            android:checked="true"
            android:icon="@drawable/ic_line"
            android:title="@string/menu_my_queues" />

        <item
            android:id="@+id/drawer_explore"
            android:checked="false"
            android:icon="@drawable/ic_explore"
            android:title="@string/menu_explore" />

        <item
            android:id="@+id/drawer_my_profile"
            android:checked="false"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_my_profile" />

        <item
            android:id="@+id/drawer_contact_us"
            android:checked="false"
            android:icon="@drawable/ic_contact_us"
            android:title="@string/menu_contact_us" />

        <item
            android:id="@+id/drawer_log_out"
            android:checked="false"
            android:icon="@drawable/ic_log_out"
            android:title="@string/menu_log_out" />

    </group>

</menu>