<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/size_16"
        android:text="@string/text_select_avatar_photo"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/font_size_normal"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorGreen"/>

    <Button
        android:id="@+id/btn_choose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:padding="@dimen/size_16"
        android:drawableLeft="@drawable/ic_gallery_black"
        android:drawableStart="@drawable/ic_gallery_black"
        android:drawablePadding="@dimen/size_16"
        android:text="@string/choose_from_gallery"
        android:textColor="@color/textColorPrimary"
        android:textAllCaps="false"
        style="@style/Base.Widget.AppCompat.Button.Borderless"/>

    <Button
        android:id="@+id/btn_take"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:padding="@dimen/size_16"
        android:drawableLeft="@drawable/ic_camera_black"
        android:drawableStart="@drawable/ic_camera_black"
        android:drawablePadding="@dimen/size_16"
        android:text="@string/take_from_camera"
        android:textColor="@color/textColorPrimary"
        android:textAllCaps="false"
        style="@style/Base.Widget.AppCompat.Button.Borderless"/>

</LinearLayout>