<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.skipq.android.views.user.SignUpActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/img_background"
        android:scaleType="centerCrop"
        android:contentDescription="@string/app_name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:text="@string/back"
            android:textAllCaps="false"
            android:drawableLeft="@drawable/ic_back"
            android:drawableStart="@drawable/ic_back"
            android:theme="@style/ButtonStyle"
            style="@style/Widget.AppCompat.Button.Borderless"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/size_16">

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/sign_up"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_size_title"
                android:textStyle="bold"
                android:textAllCaps="true"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="textPersonName"
                android:hint="@string/hint_full_name"
                app:met_baseColor="@android:color/white"
                app:met_primaryColor="@android:color/white"
                app:met_errorColor="@color/colorRed"
                app:met_textColorHint="@color/colorTextHint"
                app:met_floatingLabel="highlight"
                app:met_iconLeft="@drawable/ic_user"
                app:met_clearButton="true"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email"
                app:met_baseColor="@android:color/white"
                app:met_primaryColor="@android:color/white"
                app:met_errorColor="@color/colorRed"
                app:met_textColorHint="@color/colorTextHint"
                app:met_floatingLabel="highlight"
                app:met_iconLeft="@drawable/ic_email"
                app:met_clearButton="true"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="phone"
                android:hint="@string/hint_mobile"
                app:met_baseColor="@android:color/white"
                app:met_primaryColor="@android:color/white"
                app:met_errorColor="@color/colorRed"
                app:met_textColorHint="@color/colorTextHint"
                app:met_floatingLabel="highlight"
                app:met_iconLeft="@drawable/ic_mobile"
                app:met_clearButton="true"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="textPassword"
                android:hint="@string/hint_password"
                app:met_baseColor="@android:color/white"
                app:met_primaryColor="@android:color/white"
                app:met_errorColor="@color/colorRed"
                app:met_textColorHint="@color/colorTextHint"
                app:met_floatingLabel="highlight"
                app:met_iconLeft="@drawable/ic_password"
                app:met_clearButton="true"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="textPassword"
                android:hint="@string/hint_confirm_password"
                app:met_baseColor="@android:color/white"
                app:met_primaryColor="@android:color/white"
                app:met_errorColor="@color/colorRed"
                app:met_textColorHint="@color/colorTextHint"
                app:met_floatingLabel="highlight"
                app:met_iconLeft="@drawable/ic_password"
                app:met_clearButton="true"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"/>

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/size_08"
                fancy:fb_text="SIGN UP"
                fancy:fb_textColor="@android:color/white"
                fancy:fb_textSize="@dimen/font_size_normal"
                fancy:fb_defaultColor="@color/colorGreen"
                fancy:fb_focusColor="@color/colorBlue"
                fancy:fb_radius="@dimen/size_32"
                fancy:fb_ghost="false"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/size_16"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_already_registered"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/font_size_normal"
                    android:id="@+id/textView" />

                <mehdi.sakout.fancybuttons.FancyButton
                    android:id="@+id/btn_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/size_08"
                    fancy:fb_text="Sign In"
                    fancy:fb_textColor="@color/colorBlue"
                    fancy:fb_textSize="@dimen/font_size_normal"
                    fancy:fb_focusColor="@color/colorBlue"
                    fancy:fb_radius="@dimen/border_radius"
                    fancy:fb_ghost="true"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
