<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_change_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.skipq.android.views.main.ChangePasswordActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ToolbarTheme">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_change_password"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_size_title"
            android:textStyle="bold"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/size_16"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textPassword"
            android:hint="@string/hint_old_password"
            app:met_baseColor="@android:color/black"
            app:met_primaryColor="@android:color/black"
            app:met_errorColor="@color/colorRed"
            app:met_textColorHint="@color/textColorSecondary"
            app:met_floatingLabel="highlight"
            app:met_iconLeft="@drawable/ic_password"
            app:met_clearButton="true"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textPassword"
            android:hint="@string/hint_new_password"
            app:met_baseColor="@android:color/black"
            app:met_primaryColor="@android:color/black"
            app:met_errorColor="@color/colorRed"
            app:met_textColorHint="@color/textColorSecondary"
            app:met_floatingLabel="highlight"
            app:met_iconLeft="@drawable/ic_password"
            app:met_clearButton="true"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textPassword"
            android:hint="@string/hint_confirm_password"
            app:met_baseColor="@android:color/black"
            app:met_primaryColor="@android:color/black"
            app:met_errorColor="@color/colorRed"
            app:met_textColorHint="@color/textColorSecondary"
            app:met_floatingLabel="highlight"
            app:met_iconLeft="@drawable/ic_password"
            app:met_clearButton="true"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="@dimen/size_08"
            android:paddingBottom="@dimen/size_08"
            android:layout_marginLeft="@dimen/size_48"
            android:layout_marginRight="@dimen/size_48"
            fancy:fb_text="Save"
            fancy:fb_textColor="@android:color/white"
            fancy:fb_textSize="@dimen/font_size_normal"
            fancy:fb_defaultColor="@color/colorGreen"
            fancy:fb_focusColor="@color/colorBlue"
            fancy:fb_radius="@dimen/size_32"
            fancy:fb_ghost="false"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"/>

    </LinearLayout>

</LinearLayout>
