<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_my_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/size_16"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <RelativeLayout
            android:layout_width="@dimen/nav_header_avatar_width"
            android:layout_height="@dimen/nav_header_avatar_width"
            android:layout_gravity="center_horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/img_avatar"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/colorGreen"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_avatar_edit"
                android:layout_width="@dimen/avatar_edit_width"
                android:layout_height="@dimen/avatar_edit_width"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_camera"
                app:civ_fill_color="@color/colorPrimary"
                app:civ_border_width="1dp"
                app:civ_border_color="@android:color/white"
                android:visibility="invisible"/>

        </RelativeLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textPersonName"
            android:hint="@string/hint_full_name"
            app:met_baseColor="@android:color/black"
            app:met_primaryColor="@android:color/black"
            app:met_errorColor="@color/colorRed"
            app:met_textColorHint="@color/textColorSecondary"
            app:met_floatingLabel="highlight"
            app:met_iconLeft="@drawable/ic_user" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email"
            app:met_baseColor="@android:color/black"
            app:met_primaryColor="@android:color/black"
            app:met_errorColor="@color/colorRed"
            app:met_textColorHint="@color/textColorSecondary"
            app:met_floatingLabel="highlight"
            app:met_iconLeft="@drawable/ic_email" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="phone"
            android:hint="@string/hint_mobile"
            app:met_baseColor="@android:color/black"
            app:met_primaryColor="@android:color/black"
            app:met_errorColor="@color/colorRed"
            app:met_textColorHint="@color/textColorSecondary"
            app:met_floatingLabel="highlight"
            app:met_iconLeft="@drawable/ic_mobile" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btn_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="@dimen/size_08"
            android:paddingBottom="@dimen/size_08"
            android:layout_marginLeft="@dimen/size_48"
            android:layout_marginRight="@dimen/size_48"
            fancy:fb_text="Change Password"
            fancy:fb_textSize="@dimen/font_size_normal"
            fancy:fb_defaultColor="@color/colorGreen"
            fancy:fb_focusColor="@color/colorBlue"
            fancy:fb_radius="@dimen/size_32"
            fancy:fb_ghost="false"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>